// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button renders correctly 1`] = `
<button
  className="button"
/>
`;

exports[`button renders correctly with icon 1`] = `
<button
  className="button"
>
  <img
    className="iconLeft"
    src="/static/icon.png"
  />
  Button with icon
</button>
`;

exports[`button renders correctly with right icon 1`] = `
<button
  className="button"
>
  Button with icon right
  <img
    className="iconRight"
    src="/static/icon2.png"
  />
</button>
`;

exports[`button renders correctly with text 1`] = `
<button
  className="button"
>
  Button with text
</button>
`;
